--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.17.13",
     "axios": "^1.13.2",
+    "firebase": "^12.8.0",
     "framer-motion": "^12.29.0",
     "lucide-react": "^0.563.0",
     "plyr": "^3.8.4",
